feat: create single prompt (#17)
* feat: create single prompt

* fix: update swagger
